Format Modified CSS Format to ensure proper readability

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     /* font-famalies */
     --font-headline: "Teko",
         sans-serif;
-         --font-family:"Teko",
+    --font-family: "Teko",
         sans-serif;
 }
 
@@ -24,26 +24,26 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: var(--app-background-color);
     color: var(--primary-color);
-    font-family: var(--font-family) ;
+    font-family: var(--font-family);
 }
 
-h1{
+h1 {
     font-size: 1.125rem;
     line-height: 1.6;
 }
 
-h2{
+h2 {
     font-size: var(--root-font-size);
 }
 
-ul{
+ul {
     margin: 0;
 }
 
-.container{
+.container {
     margin-top: 10px;
     display: flex;
     flex-direction: column;
@@ -52,13 +52,14 @@ ul{
     row-gap: 5px;
 }
 
-.player,.playlist{
+.player,
+.playlist {
     width: 450px;
     background-color: var(--background-color);
     border: 3px solid var(--foreground-color);
 }
 
-.player{
+.player {
     height: 260px;
     padding: 10px;
     display: flex;
@@ -67,7 +68,8 @@ ul{
     row-gap: 10px;
 }
 
-.player-bar,.playlist-bar{
+.player-bar,
+.playlist-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -77,21 +79,22 @@ ul{
     background-color: var(--foreground-color);
 }
 
-.parallel-lines{
+.parallel-lines {
     display: flex;
     flex-wrap: wrap;
     row-gap: 6px;
     padding: 0 5px;
 }
 
-.parallel-lines > div{
+.parallel-lines>div {
     height: 2px;
     width: 100%;
     min-width: 75px;
     background-color: var(--highlight-color);
 }
 
-.fcc-title,.playlist-title{
+.fcc-title,
+.playlist-title {
     color: var(--secondary-color);
     margin: 0 10px;
     font-family: var(--font-headline);
@@ -107,12 +110,12 @@ ul{
     justify-content: center;
 }
 
-#player-album-art img{
+#player-album-art img {
     width: 150px;
     display: block;
 }
 
-.player-display{
+.player-display {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
@@ -121,19 +124,19 @@ ul{
     width: 226px;
 }
 
-.player-display-song-artist{
+.player-display-song-artist {
     height: 80px;
 }
 
-.player-buttons svg{
+.player-buttons svg {
     fill: var(--primary-color)
 }
 
-.playing > svg{
+.playing>svg {
     fill: var(--highlight-color)
 }
 
-.player-buttons{
+.player-buttons {
     display: flex;
     justify-content: space-around;
 }
@@ -148,21 +151,22 @@ button {
     text-align: center;
 }
 
-.playlist-song{
+.playlist-song {
     outline-color: var(--highlight-color);
 }
 
-.playlist li :not(:last-child){
+.playlist li :not(:last-child) {
     border-bottom: 1px solid var(--background-color);
 }
 
-button :focus, .playlist-song :focus{
+button :focus,
+.playlist-song :focus {
     outline-style: dashed;
     outline-width: 2px;
 }
 
 /* .playlist */
-.playlist{
+.playlist {
     height: auto;
     padding: 10px;
     display: flex;
@@ -171,7 +175,7 @@ button :focus, .playlist-song :focus{
     row-gap: 10px;
 }
 
-#playlist-songs{
+#playlist-songs {
     width: 430px;
     height: 100%;
     background-color: var(--foreground-color);
@@ -184,7 +188,7 @@ button :focus, .playlist-song :focus{
     list-style: none;
 }
 
-.playlist-song{
+.playlist-song {
     display: flex;
     height: 55px;
     justify-content: space-between;
@@ -200,7 +204,7 @@ button :focus, .playlist-song :focus{
     color: var(--highlight-color);
 }
 
-.playlist-song-info{
+.playlist-song-info {
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -211,22 +215,23 @@ button :focus, .playlist-song :focus{
     font-family: var(--font-family);
 }
 
-#player-song-title, #player-song-artist{
+#player-song-title,
+#player-song-artist {
     margin: 0;
 }
 
-#player-song-artist{
+#player-song-artist {
     color: var(--highlight-color);
     font-size: 0.75rem;
 }
 
-#player-song-title{
+#player-song-title {
     font-size: 1.125rem;
 }
 
-.playlist-song-title{
+.playlist-song-title {
     font-size: 0.85rem;
-    width:241px;
+    width: 241px;
     text-align: left;
 }
 
@@ -235,41 +240,42 @@ button :focus, .playlist-song :focus{
     width: 80px;
 } */
 
-.playlist-song-artist{
+.playlist-song-artist {
     font-size: 0.725rem;
     width: 80px;
 }
 
-.playlist-song-duration{
+.playlist-song-duration {
     font-size: 0.725rem;
     margin: auto;
     font-family: var(--font-family);
     width: 30px;
 }
 
-.playlist-song-delete{
+.playlist-song-delete {
     padding: 0;
     width: 20px;
     height: 20px;
 }
 
 .playlist-song-delete,
-.playlist-song-delete{
+.playlist-song-delete {
     fill: var(--foreground-color);
 }
 
 .playlist-song-delete:hover circle,
-.playlist-song-delete:focus circle{
+.playlist-song-delete:focus circle {
     fill: #ff0000
 }
 
 @media (max-width: 700px) {
+
     .player,
-    .playlist{
+    .playlist {
         width: 300px;
     }
 
-    .player{
+    .player {
         height: 340px;
     }
 
@@ -283,47 +289,49 @@ button :focus, .playlist-song :focus{
     }
 
     #playlist-songs ::-webkit-scrollbar {
-        width : 5px
+        width: 5px
     }
 
     #playlist-songs ::-webkit-scrollbar-track {
         background: var(--background-color);
-    } 
+    }
 
-    #playlist-songs ::-webkit-scrollbar-thumb{
+    #playlist-songs ::-webkit-scrollbar-thumb {
         background: var(--secondary-color);
     }
 
-    h1{
+    h1 {
         font-size: 0.813rem;
     }
 
-    h2{
+    h2 {
         font-size: 0.75rem;
     }
 
     .player-bar,
-    .playlist-bar,.player-content, #playlist-songs{
+    .playlist-bar,
+    .player-content,
+    #playlist-songs {
         width: 280px;
     }
 
-    .playlist-song{
+    .playlist-song {
         justify-content: space-between;
     }
-    
-    .playlist-song-title{
+
+    .playlist-song-title {
         width: 140px;
     }
 
-    .playlist-song-artist{
+    .playlist-song-artist {
         width: 40px;
     }
 
-    .playlist-song-duration > button{
+    .playlist-song-duration>button {
         padding: 0;
     }
 
-    .player-content{
+    .player-content {
         display: inline;
         position: relative;
         justify-content: center;
@@ -337,16 +345,16 @@ button :focus, .playlist-song :focus{
         background: #000;
     }
 
-    #player-album-art img{
+    #player-album-art img {
         width: 100%;
         opacity: 0.6;
     }
 
-    .player-display-song-artist > p{
+    .player-display-song-artist>p {
         white-space: pre-wrap;
     }
 
-    .player-display{
+    .player-display {
         position: absolute;
         width: 100%;
         z-index: 1000;
